# taskallocation

abb_robots/ridgeback_yumi/ridgeback_yumi_launch/: CMakeLists.txt
abb_robots/yumi/gazebo_mimic/: CMakeLists.txt
agv/agv_drive_sim/: CMakeLists.txt  package.xml
agv/agv_drive_sim/launch/: agv_drive_sim.launch
agv/agv_drive_sim/src/: agv_drive_sim_main.cpp  agv_drive_sim_node.cpp  agv_drive_sim_node.h
agv/agv_odom_sim/: CMakeLists.txt  package.xml
agv/agv_odom_sim/cfg/: agv_odom_sim.cfg
agv/agv_odom_sim/config/: agv_odom_sim.yaml
agv/agv_odom_sim/launch/: agv_odom_sim.launch
agv/agv_odom_sim/src/: agv_odom_sim_main.cpp  agv_odom_sim_node.cpp  agv_odom_sim_node.h
agv/agv_tests_sim/: CMakeLists.txt  package.xml
agv/agv_tests_sim/config/: agv_iri_local_mapping.yaml
agv/agv_tests_sim/doc/: ant_simulation_diagram.odp
agv/agv_tests_sim/launch/: agv_sim_01_drive.launch  agv_sim_02_tele_op.launch  agv_sim_03_local_mapping.launch  agv_sim_04_local_goal.launch  agv_sim_05_slam.launch  agv_sim_06_slam.launch  agv_sim_local_mapping.launch  agv_sim_local_planning.launch
agv/agv_tests_sim/rviz/: agv_sim_01.rviz  agv_sim_02.rviz  agv_sim_03.rviz  agv_sim_04.rviz  agv_sim_05.rviz
agv/arts_driver/: CMakeLists.txt  package.xml
agv/arts_driver/launch/: arts_driver_up.launch
agv/arts_driver/src/: arts_main.cpp
agv/arts_urdf/: CMakeLists.txt  package.xml
agv/arts_urdf/launch/: arts_site_positions.launch
agv/arts_urdf/urdf/: arts_site_positions.urdf
agv/cargo_ants_msgs/: CMakeLists.txt  package.xml
agv/cargo_ants_msgs/msg/: ArtsArray.msg  ArtsMeasurement.msg  BNRLogging.msg  ContainerInfo.msg  ContainerToSchedule.msg  Corner.msg  Goal.msg  LaserDetection.msg  LaserDetectionsArray.msg  Line.msg  MoveHMIButtons.msg  MoveVehicleSpeed.msg  MoveVehicleState.msg  MoveWheelSpeed.msg  MovingBase.msg  MovingBasePSI.msg  MovingBasePSIddot.msg  MovingBasePSIdot.msg  MovingBaseX.msg  MovingBaseXddot.msg  MovingBaseXdot.msg  MovingBaseY.msg  MovingBaseYddot.msg  MovingBaseYdot.msg  ObjectTrack.msg  ObjectTrackArray.msg  ObjectTrackAtSdf.msg  ObjectTrackAtSdfArray.msg  Obstacle.msg  Origin.msg  OxtsBodyAcceleration.msg  OxtsHPR.msg  OxtsLatLon.msg  OxtsLevelAccel.msg  OxtsVelLevelFrame.msg  OxtsVelocity.msg  Path.msg  Point.msg  Polyline.msg  RadarCluster209.msg  (+10 more)
multihusky_simulator-master/multihusky_navigation/: CMakeLists.txt  package.xml
multihusky_simulator-master/multihusky_navigation/config/: costmap_common.yaml  costmap_global_laser.yaml  costmap_global_static.yaml  costmap_local.yaml  teb_local_planner_params.yaml
multihusky_simulator-master/multihusky_navigation/launch/: move_base.launch  move_base_flex.launch  move_base_flex_mp.launch
multihusky_simulator-master/multihusky_navigation/scripts/: flex_smach.py  mbf_state_machine.py  plan_exec_sm.py
navigation_stage/: CMakeLists.txt  README.md  multi_maze_robot10.rviz  multi_maze_robot2.rviz  multi_maze_robot5.rviz  multi_maze_robot6.rviz  multi_maze_robot7.rviz  multi_robot.rviz  multi_robot5.rviz  multi_robot7.rviz  package.xml  single_robot.rviz
navigation_stage/figures/: 5robots
navigation_stage/include/navigation_stage/: deterministic_annealing.h  heuristic.h  simulated_annealing.h  task_subpub.h
navigation_stage/include/others/: RefreshItemList.hh  cost.hh  robot.hh
navigation_stage/launch/: main_multi_10robots.launch  main_multi_5robots.launch  main_multi_6robots.launch  main_multi_7robots.launch  move_base_amcl_2.5cm.launch  move_base_amcl_5cm.launch  move_base_fake_localization_2.5cm.launch  move_base_fake_localization_5cm.launch  multi_test.launch  task_allocation_node.launch  task_allocation_node2.launch  yumi.launch
navigation_stage/launch/amcl/: circlemaze_10robots_50tasks.launch  circlemaze_5robots_18tasks.launch  circlemaze_5robots_30tasks.launch  circlemaze_5robots_5tasks.launch  circlemaze_6robots_18tasks.launch  circlemaze_6robots_36tasks.launch  circlemaze_6robots_7tasks.launch  circlemaze_7robots_10tasks.launch  circlemaze_7robots_18tasks.launch  circlemaze_7robots_40tasks.launch  cobot_10robots_50tasks.launch  cobot_5robots_18tasks.launch  cobot_5robots_30tasks.launch  cobot_5robots_5tasks.launch  cobot_6robots_18tasks.launch  cobot_6robots_36tasks.launch  cobot_6robots_7tasks.launch  cobot_7robots_10tasks.launch  cobot_7robots_18tasks.launch  cobot_7robots_40tasks.launch  maze2_10robots_50tasks.launch  maze2_5robots_18tasks.launch  maze2_5robots_30tasks.launch  maze2_5robots_5tasks.launch  maze2_6robots_18tasks.launch  maze2_6robots_36tasks.launch  maze2_6robots_7tasks.launch  maze2_7robots_10tasks.launch  maze2_7robots_18tasks.launch  maze2_7robots_40tasks.launch  maze_10robots_50tasks.launch  (+91 more)
navigation_stage/move_base_config/: amcl_node.xml  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base.xml
navigation_stage/player/: multi_robot_task_10.cfg  multi_robot_task_2.cfg  multi_robot_task_5.cfg  multi_robot_task_6.cfg  multi_robot_task_7.cfg  player6.sh
navigation_stage/results/: heuristic_5robots_willow_18tasks.txt  heuristic_7robots_willow_18tasks.txt
navigation_stage/rviz/: multi_robot.rviz  multi_robot10.rviz  multi_robot6.rviz
navigation_stage/src/: .Heuristic.cpp.kate-swp  DistCost.cpp  Heuristic.cpp  Hungarian.cpp  PathCost.cpp  SendGoals.cpp  StageRobot.cpp  TaskAllocationPub.cpp  TaskAllocationSub.cpp  deterministic_annealing.cpp  euclidean.cpp  heuristic.cpp  heuristic1.cpp  heuristic2.cpp  mCHOMP.cpp  multi_robot_task_10.cfg  multi_robot_task_5.cfg  multi_robot_task_6.cfg  multi_robot_task_7.cfg  original_approx.cpp  path_cost.cpp  path_cost_node.cpp  send_goals_node.cpp  sim_annealing.cpp  simulated_annealing.cpp  stage_robots_node.cpp  task_allocation_node.cpp  task_subpub.cpp
navigation_stage/task_config/: task_config.yaml
ridgeback_yumi/ridgeback_yumi_description/: package.xml
ridgeback_yumi/ridgeback_yumi_launch/: package.xml
ridgeback_yumi/ridgeback_yumi_viz/: package.xml
rosaction/: CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
rosaction/scripts/: rosaction
(+2755 files in other folders)
