<?xml version="1.0"?>
<package>
  <name>navigation_stage</name>
  <version>0.2.3</version>
  <description>
    This package holds example launch files for running the ROS navigation stack in stage.
  </description>

  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>

  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/navigation_stage</url>
  <url type="repository">https://github.com/ros-planning/navigation_tutorials</url>
  <url type="bugtracker">https://github.com/ros-planning/navigation_tutorials/issues</url>

  <author>Eitan Marder-Eppstein</author>
  <export>
  <nav_core plugin="${prefix}/global_planner_plugin.xml" />
  </export>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_filters</build_depend>

  <run_depend>amcl</run_depend>
  <run_depend>fake_localization</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>stage_ros</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_filters</run_depend>
  
</package>
