<?xml version="1.0"?>
<package>
    <name>agv_drive_sim</name>
    <version>0.0.0</version>
    <description>
        The agv_drive_sim package. This package implements a ROS node which receives velocity commands and translates them
        to control inputs for low-level to steer and wheel transmission PID's. Therefore it implements inverese kinematics
        of AGV, specifically the zero side-slip model. 
    </description>

    <!-- One maintainer tag required, multiple allowed, one person per tag --> 
    <maintainer email="acoromin@iri.upc.edu">Andreu Corominas Murtra</maintainer>

    <!-- One license tag required, multiple allowed, one license per tag -->
    <license>TODO</license>

    <!-- Dependencies -->
    <buildtool_depend>catkin</buildtool_depend>
    
    <!-- Use build_depend for packages you need at compile time: -->
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>    
    <build_depend>std_msgs</build_depend>
    <build_depend>cargo_ants_msgs</build_depend>

    <!-- Use run_depend for packages you need at runtime: -->
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>    
    <run_depend>std_msgs</run_depend>
    <run_depend>cargo_ants_msgs</run_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
    </export>
    
</package>