<?xml version="1.0"?>
<package>
  <name>arts_driver</name>
  <version>0.0.0</version>
    <description>
        The arts_driver message
    </description>

    <!-- One maintainer tag required, multiple allowed, one person per tag --> 
    <maintainer email="acoromin@iri.upc.edu">Andreu Corominas Murtra</maintainer>

    <!-- One license tag required, multiple allowed, one license per tag -->
    <license>BSD</license>

    <!-- Url tags are optional, but mutiple are allowed, one per tag -->
    <url type="website">http://wiki.ros.org/ants_example</url>

    <!-- Author tags are optional, mutiple are allowed, one per tag -->
    <author email="acoromin@iri.upc.edu">Laurie, Jos and Andreu</author>

    <!-- The *_depend tags are used to specify dependencies -->
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <!-- <build_depend>message_generation</build_depend> -->
    <build_depend>cargo_ants_msgs</build_depend>  

    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <!-- <run_depend>message_runtime</run_depend> -->
    <run_depend>cargo_ants_msgs</run_depend>
    
</package>