<?xml version="1.0"?>
<package>
  <name>cargo_ants_msgs</name>
  <version>0.0.0</version>
  <description>The cargo_ants_msgs package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="jvallve@iri.upc.edu">developer</maintainer>
  <maintainer email="acorominas@iri.upc.edu">developer</maintainer>
  
  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <!-- buildtool dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Use build_depend for packages you need at compile time: -->
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Use run_depend for packages you need at runtime: -->
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>