<?xml version="1.0"?>
<package>
  <name>ridgeback_yumi_description</name>
  <version>0.0.0</version>
  <description>URDF robot description for Ridgeback YuMi (The Yumimobile).</description>

  <maintainer email="yoshua@kth.se">Yoshua Nava</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>yumi_description</run_depend>
  <run_depend>ridgeback_description</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
