<?xml version="1.0"?>
<package>
  <name>ridgeback_yumi_launch</name>
  <version>0.0.0</version>
  <description>Launchers and helpers for Ridgeback YuMi (The Yumimobile).</description>

  <maintainer email="yoshua.nava@kth.se">Yoshua Nava</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <run_depend>ridgeback_yumi_description</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>rviz</run_depend>

  <export>
  </export>
</package>
